--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,15 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".feature_korb.presentation.StartActivity">
 
-    <fragment
-        android:id="@+id/koerbe"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/flFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="de.xxlstrandkorbverleih.smartkorb.feature_korb.presentation.körbe.KoerbeFragment">
-
-    </fragment>
+        android:layout_height="match_parent">
+    </androidx.viewpager.widget.ViewPager>
 </androidx.constraintlayout.widget.ConstraintLayout>
