start working on Usecase Booking

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,4 +21,8 @@
             android:id="@+id/action_addEditKorbFragment_to_showKoerbeFragment"
             app:destination="@id/showKoerbeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/bookingFragment"
+        android:name="de.xxlstrandkorbverleih.smartkorb.feature_korb.presentation.booking.BookingFragment"
+        android:label="BookingFragment" />
 </navigation>
