--- a/app/src/main/res/layout/fragment_add_edit_korb.xml
+++ b/app/src/main/res/layout/fragment_add_edit_korb.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".feature_korb.presentation.addEditKorb.AddKorbActivity">
+    tools:context=".feature_korb.presentation.addEditKorb.addEditKorbFragment">
 
     <EditText
         android:id="@+id/edit_text_number"
@@ -15,7 +15,7 @@
         android:hint="Number"
         android:inputType="number" />
 
-    <EditText
+    <Spinner
         android:id="@+id/edit_text_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
