--- a/app/src/main/res/menu/drawer_nav_menu.xml
+++ b/app/src/main/res/menu/drawer_nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/homeFragment"
-        android:title="Home"
+        android:id="@+id/bookingFragment"
+        android:title="Booking"
         android:icon="@drawable/ic_home"/>
 
     <item
-        android:id="@+id/searchFragment"
-        android:title="Search"
+        android:id="@+id/showKoerbeFragment"
+        android:title="Übersicht Körbe"
         android:icon="@drawable/ic_search"/>
 </menu>
