-added NfcDialog to enable Readermode and read TagUid -added NfcDialogViewModel to transfer the Tag Uid in addEditKorbFragment -added NfcDialog to NavGraph -added KorbUid and KeyUid to Korb Model -changed korb_item.xml from ComposeLayout to TableLayout -removed Application context from Constructor in KorbViewModel -removed Dummydata from KorbDatabase

--- a/app/src/main/res/layout/fragment_add_edit_korb.xml
+++ b/app/src/main/res/layout/fragment_add_edit_korb.xml
@@ -39,6 +39,12 @@
         android:layout_height="wrap_content"
         android:hint="Accuracy"
         android:padding="12dp" />
+    <TextView
+        android:id="@+id/text_view_key_uid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Key UID"
+        android:padding="12dp" />
     <Button
         android:id="@+id/button_write_korb_tag"
         android:layout_width="match_parent"
