-put addEditKorbFragment and NfcDialog in Nested Nav Graph and used this Scope for NfcDialogViewModel to ensure the ViewModel is destroyed after leaving addEditKorbFragment.

--- a/app/src/main/res/layout/fragment_add_edit_korb.xml
+++ b/app/src/main/res/layout/fragment_add_edit_korb.xml
@@ -39,21 +39,27 @@
         android:layout_height="wrap_content"
         android:hint="Accuracy"
         android:padding="12dp" />
+    <Button
+        android:id="@+id/button_write_korb_tag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Write Korb RFID Tag"/>
+    <TextView
+        android:id="@+id/text_view_korb_uid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Korb UID"
+        android:padding="12dp" />
+    <Button
+        android:id="@+id/button_write_key_tag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Write Key RFID Tag"/>
     <TextView
         android:id="@+id/text_view_key_uid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Key UID"
         android:padding="12dp" />
-    <Button
-        android:id="@+id/button_write_korb_tag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Write Korb RFID Tag"/>
-    <Button
-        android:id="@+id/button_write_key_tag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Write Key RFID Tag"/>
 
 </LinearLayout>
