--- a/app/src/main/res/layout/korb_item.xml
+++ b/app/src/main/res/layout/korb_item.xml
@@ -2,7 +2,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:stretchColumns="5"
+    android:stretchColumns="1,2,3,4,5"
     android:layout_margin="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp">
@@ -22,7 +22,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="2"
-            android:layout_marginStart="12dp"
             android:text="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -31,24 +30,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="3"
-            android:layout_marginStart="12dp"
             android:text="01.01.1980"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <CheckBox
-            android:id="@+id/check_box_tag_key"
+            android:id="@+id/check_box_key_uid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="4"
-            android:clickable="false"
-            android:layout_marginStart="12dp"/>
+            android:clickable="false"/>
 
         <CheckBox
-            android:id="@+id/check_box_tag_korb"
+            android:id="@+id/check_box_korb_uid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="5"
-            android:clickable="false"
-            android:layout_marginStart="12dp"/>
+            android:clickable="false"/>
     </TableRow>
 </TableLayout>
