-added ScanBeachchairsNfcTag -added ScanBeachchairsNfcTagViewModel -added ScanBeachchairsNfcTag Fragment to NavGraph and DrawerMenu -added Data Binding to ScanBeachchairsNfcTag -there seems to be a problem with Data binding and Hilt

--- a/app/src/main/res/menu/drawer_nav_menu.xml
+++ b/app/src/main/res/menu/drawer_nav_menu.xml
@@ -10,4 +10,8 @@
         android:id="@+id/showKoerbeFragment"
         android:title="Übersicht Körbe"
         android:icon="@drawable/ic_search"/>
+    <item
+        android:id="@+id/scanBeachchairLocationFragment"
+        android:title="Scan Körbe"
+        android:icon="@drawable/ic_search"/>
 </menu>
