-added ScanBeachchairsNfcTag -added ScanBeachchairsNfcTagViewModel -added ScanBeachchairsNfcTag Fragment to NavGraph and DrawerMenu -added Data Binding to ScanBeachchairsNfcTag -there seems to be a problem with Data binding and Hilt

--- a/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
+++ b/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
@@ -29,13 +29,13 @@
                 android:id="@+id/beachchair_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{}"/>
+                android:text="@{beachchair.uid}"/>
 
             <TextView
                 android:id="@+id/beachchair_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{}"/>
+                android:text="@{String.valueOf(beachchair.beachchair.number)}"/>
 
             <TextView
                 android:id="@+id/beachchair_location_accuracy"
