--- a/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
+++ b/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
@@ -17,7 +17,7 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="70" />
+            android:layout_weight="100" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +40,8 @@
             <TextView
                 android:id="@+id/beachchair_location_accuracy"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="@{beachchair.gpsMessageLiveData}"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
