--- a/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
+++ b/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
@@ -4,7 +4,7 @@
     <data>
 
         <variable
-            name="beachchair"
+            name="viewmodel"
             type="de.xxlstrandkorbverleih.smartkorb.feature_korb.presentation.scanBeachchairsNfcTag.ScanBeachchairsNfcTagViewModel" />
     </data>
 
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="400px"
             android:layout_weight="70"
-            app:initMap="@{beachchair.mMapLatLng}"/>
+            app:initMap="@{viewmodel.beachchair}"/>
         <!--
 map:mapType="0" Specifies a change to the initial map type
 map:zOrderOnTop="true"  Control whether the map view's surface is placed on top of its window
@@ -46,20 +46,13 @@ map:cameraMaxZoomPreference="1.0" Specifies a preferred upper bound for camera z
             <TextView
                 android:id="@+id/beachchair_type"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{beachchair.uid}" />
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/beachchair_number"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{String.valueOf(beachchair.beachchair.number)}" />
+                android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/beachchair_location_accuracy"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{beachchair.gpsMessageLiveData}" />
         </LinearLayout>
     </LinearLayout>
 </layout>
