-show all Beachchairs in Map

--- a/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
+++ b/app/src/main/res/layout/fragment_scan_beachchairs_location.xml
@@ -35,7 +35,7 @@ map:cameraMaxZoomPreference="1.0" Specifies a preferred upper bound for camera z
             android:id="@+id/korb_map_scan_location"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:initMap="@{viewmodel.beachchair}"
+            app:initMap="@{viewmodel.allBeachchairs}"
 
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
