-start working onMarkerClick -start working on BookingFragmentViewModel

--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -43,6 +43,7 @@
             android:id="@+id/korb_map"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:initMap="@{viewmodel.allBeachchairs}"
 
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
